<resources>
	<string name="app_name">Icing - Legacy</string>
	<string-array name="drawer_items">
		<item>Movies</item>
		<item>Sources</item>
		<item>Servers</item>
	</string-array>
	<string name="drawer_expand_description">Open Navigation Drawer</string>
	<string name="drawer_close_description">Close Navigation Drawer</string>
	
	<string name="must_include_server_name">Must include a name</string>
	<string name="must_include_server_hostname">Cannot save server without a hostname</string>
	<string name="use_https">Use HTTPS</string>
	<string name="standalone_server">Standalone</string>
	<string name="deployment_type">Deployment Type</string>
	<string name="app_server">App Server</string>
	<string name="custom_ctx">Custom Context</string>
	<string name="custom_ctx_hint">context (ie: /media)</string>
	<string name="custom_ctx_must_start_with_slash">Must begin with a /</string>
	<string name="new_server">New Server</string>
	<string name="edit_server">Edit Server</string>
	<string name="server_saved_successfully">Server saved successfully</string>
	<string name="hostname_must_not_be_url">Cannot be a URL</string>
	<string name="srvr_hostname_hint">hostname[:port] or IP[:port]</string>
	<string name="invalid_port">Invalid port %s</string>
	<string name="please_add_at_least_one_server">Please add at least one Icing server</string>
</resources>
